# toru

./: .gitignore  .rustfmt.toml  .toru.yaml  Cargo.toml  cli.yaml
src/: cli.rs  curses.rs  lib.rs  main.rs  task.rs  tree.rs  tui.rs
