[package]
name = "toru"
version = "0.1.0"
authors = ["Usman Zahid <usmanzahid1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
time = { version = "0.2", features = ["serde"] }
tui = { version = "0.9", default-features = false, features = ['crossterm'] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
